--- a/VendasWebMVC/appsettings.json
+++ b/VendasWebMVC/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "VendasWebMVCContext": "Server=(localdb)\\mssqllocaldb;Database=VendasWebMVCContext-83990466-a5e7-4230-af1c-1fc3ac3f604f;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
