--- a/VendasWebMVC/appsettings.json
+++ b/VendasWebMVC/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "VendasWebMVCContext": "Server=(localdb)\\mssqllocaldb;Database=VendasWebMVCContext-83990466-a5e7-4230-af1c-1fc3ac3f604f;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "VendasWebMVCContext": "server=localhost;userid=root;password=1234;database=vendaswebmvcappdb"
   }
 }
